--- a/style.css
+++ b/style.css
@@ -5,8 +5,9 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: 97vh;
     flex-direction: column;
+    font-family: Rubik;
 }
 
 #el {
@@ -15,20 +16,22 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    border-radius: 15px;
+    border-radius: 20px;
     padding: 15px;
     margin: 10px;
     width: 15%;
+    box-shadow:
+      0 20px 25px hsl(0deg 0% 0% / 0.05)
+    ;
 }
 
 img {
     width: 100%;
-    border-radius: 5px;
+    border-radius: 10px;
 }
 
 #txt {
     text-align: center;
-    font-family: Rubik;
     color: #2B3959;
     display: flex;
     justify-content: center;
@@ -42,11 +45,17 @@ img {
 }
 
 #dsc {
-    color: #9298A4;
-    font-size: 11px;
+    color: #7b808a;
+    font-size: 12px;
     margin-right: 10px;
     margin-left: 10px;
     margin-bottom: 10px;
-    width: 85%;
-    line-height: 15px;
+    width: 90%;
+    line-height: 17px;
+}
+
+@media only screen and (max-width: 768px) {
+    #el {
+        width: 80%;
+    }
 }
