--- a/style.css
+++ b/style.css
@@ -5,9 +5,11 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 97vh;
+    height: 100vh;
     flex-direction: column;
     font-family: Rubik;
+    margin: 0;
+    padding: 0;
 }
 
 #el {
@@ -57,8 +59,5 @@ img {
 @media only screen and (max-width: 768px) {
     #el {
         width: 80%;
-    }
-    body {
-        height: 90vh;
     }
 }
