--- a/style.css
+++ b/style.css
@@ -21,10 +21,8 @@ body {
     border-radius: 20px;
     padding: 15px;
     margin: 10px;
-    width: 15%;
-    box-shadow:
-      0 20px 25px hsl(0deg 0% 0% / 0.05)
-    ;
+    width: 16%;
+    box-shadow: 0 20px 25px hsl(0deg 0% 0% / 0.05);
 }
 
 img {
@@ -43,7 +41,8 @@ img {
 
 #title {
     font-weight: 700;
-    margin: 10px;
+    font-size: 9px;
+
 }
 
 #dsc {
